@@ -629,7 +629,7 @@ config:
       user_agent_string: 'UCWEB/2.0 (Windows; U; wds 8.10; pt-BR; NOKIA; RM-979_1004) U2/1.0.0 UCBrowser/4.2.1.541 U2/1.0.0 Mobile'
     expected:
       DeviceClass                          : 'Mobile'
-      DeviceName                           : 'Nokia RM-979_1004'
+      DeviceName                           : 'Nokia RM-979 1004'
       DeviceBrand                          : 'Nokia'
       DeviceVersion                        : '8.10'
       OperatingSystemClass                 : 'Mobile'
