@@ -1155,6 +1155,35 @@ config:
       AgentNameVersion                     : 'MobileIron 1.8.0'
       AgentNameVersionMajor                : 'MobileIron 1'
 
+- test:
+    input:
+      user_agent_string: 'UCWEB/2.0 (MIDP-2.0; U; Adr 7.0; en-US; Nexus_6) U2/1.0.0 UCBrowser/10.9.0.946 U2/1.0.0 Mobile'
+    expected:
+      DeviceClass                          : 'Mobile'
+      DeviceName                           : 'Google Nexus 6'
+      DeviceBrand                          : 'Google'
+      DeviceVersion                        : '7.0'
+      OperatingSystemClass                 : 'Mobile'
+      OperatingSystemName                  : 'Android'
+      OperatingSystemVersion               : '7.0'
+      OperatingSystemNameVersion           : 'Android 7.0'
+      LayoutEngineClass                    : 'Browser'
+      LayoutEngineName                     : 'UCBrowser'
+      LayoutEngineVersion                  : '10.9.0.946'
+      LayoutEngineVersionMajor             : '10'
+      LayoutEngineNameVersion              : 'UCBrowser 10.9.0.946'
+      LayoutEngineNameVersionMajor         : 'UCBrowser 10'
+      AgentClass                           : 'Browser'
+      AgentName                            : 'UCBrowser'
+      AgentVersion                         : '10.9.0.946'
+      AgentVersionMajor                    : '10'
+      AgentNameVersion                     : 'UCBrowser 10.9.0.946'
+      AgentNameVersionMajor                : 'UCBrowser 10'
+      AgentLanguage                        : 'English (United States)'
+      AgentLanguageCode                    : 'en-us'
+      AgentSecurity                        : 'Strong security'
+
+
 #- test:
 #    input:
 #      user_agent_string: 'Mozilla/5.0 (Linux; Android 4.4.4; A1 Build/KTU84Q) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/33.0.0.0 Safari/537.36'
