@@ -112,3 +112,4 @@ v1.2
 v1.3
 ===
 - Added simple classification tool
+- Remove '_' from DeviceName
